supplies/supplies-mf/k8s/cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: supplies-mf
  labels:
    app: supplies-mf
spec:
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  selector:
    app: supplies-mf
