supplies/supplies-mf/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: supplies-mf
  labels:
    app: supplies-mf
spec:
  type: NodePort
  selector:
    app: supplies-mf
  ports:
    - nodePort: 30001
      port: 3000
      targetPort: 3000
