supplies/supplies-mf/k8s/ingress-service.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: supplies-mf-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: supplies-mf.info
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: supplies-mf
                port:
                  number: 80
